--- a/portfolio/text.css
+++ b/portfolio/text.css
@@ -76,6 +76,13 @@ body {
   padding: 20px;
   margin-top: 20px;
 }
+#about{
+  background-image: url(https://image-editing-services.com/wp-content/uploads/2018/10/about-us-background.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 500px;
+  
+}
 
 /* Clear floats after the columns */
 .row::after {
@@ -106,4 +113,16 @@ body {
     float: none;
     width: 100%;
   }
+}
+#contact {
+  text-align: center;
+  background-image: url("https://th.bing.com/th/id/OIP.RchfRjswOMQLaw6h3IyNsQHaEo?rs=1&pid=ImgDetMain");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+}
+
+.cont_form {
+  text-shadow: 2px 20px 30px;
+
 }
